--- a/src/layout/style.scss
+++ b/src/layout/style.scss
@@ -27,6 +27,7 @@
             background: #fff;
         }
         .ant-layout-header {
+            height: 56px;
             display: flex;
             align-items: center;
             .ant-breadcrumb {
