--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,11 @@
+// 样式重置
 @import '_reboot.scss';
+
+// 变量
+@import '_variables.scss';
+
+// 混入
+@import '_mixins.scss';
+
+// 动画效果
+@import '_animation.scss';
