--- a/src/layout/style.scss
+++ b/src/layout/style.scss
@@ -30,7 +30,7 @@
         &__content {
             background: #fff;
             margin: 16px;
-            padding: 16px;
+            padding: 16px 24px;
             min-height: 280px;
         }
         .ant-layout-header {
